--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,18 +5,19 @@
 $font-color: black !default;
 
 // レスポンシブ用マップ
-/*
+
 $breakpoints: (
         'sm': 'screen and (min-width: 500px)',
         'md': 'screen and (min-width: 768px)',
         'lg': 'screen and (min-width: 1000px)',
         'xl': 'screen and (min-width: 1200px)',
 ) !default;
-*/
+
 
 /****************************
       base.html.twig
 ****************************/
+
 /****** ヘッダー ******/
 .header {
   overflow              : hidden;
@@ -133,6 +134,46 @@ $breakpoints: (
   background-color: white;
   box-shadow      : 4px 4px 6px gray; /* https://saruwakakun.com/html-css/basic/box-shadow */
   border-radius   : 10px;
+
+  /* 見出し: 「データ入力」 */
+  h3{
+    text-align    : center;
+  }
+}
+
+/********** レスポンシブ ************/
+@media screen and (max-width: 1000px) {
+
+  /* グリッド変更 */
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .div1 { grid-area: 3 / 1 / 4 / 2; }
+  .div2 { grid-area: 3 / 2 / 4 / 3; }
+  .div3 { grid-area: 4 / 1 / 5 / 3; }
+  .div4 { grid-area: 1 / 1 / 3 / 3; }
+}
+
+@media screen and (max-width: 768px) {
+
+  /* グリッド変更 */
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .div1 { grid-area: 5 / 1 / 7 / 3; }
+  .div2 { grid-area: 7 / 1 / 8 / 3; }
+  .div3 { grid-area: 8 / 1 / 10 / 3; }
+  .div4 { grid-area: 1 / 1 / 5 / 3; }
 }
 
 /****************************
@@ -142,6 +183,13 @@ $breakpoints: (
 /****** 以下のテーブル用のコンテナ ******/
 #delete_content{
   margin          : 20px 100px 20px 100px;
+}
+
+/****** データがない場合の見出し ******/
+#none_data{
+  h1{
+    text-align    : center;
+  }
 }
 
 /****** データ開示のテーブル ******/
@@ -168,6 +216,18 @@ table{
   }
 }
 
-
-
-
+/********** レスポンシブ ************/
+@media screen and (max-width: 640px) {
+  .responsive_table {
+    width: 100%;
+  }
+  table.responsive_table th,
+  table.responsive_table td {
+    display: block;
+    width: 100%;
+    border-bottom:none;
+  }
+  .responsive_table tr:last-child{
+    border-bottom: solid 1px #ccc;
+  }
+}
