--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -61,6 +61,11 @@
     <!----------------------
          ダッシュボード
     ----------------------->
+    <!-- ユーザ名の表示 -->
+    {% if app.user %}
+        <h4>ようこそ {{ app.user.userIdentifier }} さん</h4>
+    {% endif %}
+
     <div class="parent">
         <!----------------------
              レーダーチャート
@@ -95,14 +100,11 @@
                データ入力
         ----------------------->
         <div class="div4">
-            <!-- 入力フォームボックス -->
 
+            <!-- 入力フォームボックス -->
             <div id="input_box">
 
-                <!-- ユーザ名の出力 -->
-                {% if app.user %}
-                    <h2>ようこそ {{ app.user.userIdentifier }} さん</h2>
-                {% endif %}
+                <h3>データ入力</h3>
 
                 {{ form_start(form) }}
                     <!--Memo: labelをform_labelの方を使用するとなぜか見栄えが悪くなるため、今回はそのままhtmlでラベル作成 -->
