--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,11 +1,10 @@
 /****************************
-           変数
+          variables
 ****************************/
-// フォントカラー
+// font color
 $font-color: black !default;
 
-// レスポンシブ用マップ
-
+// map for responsible
 $breakpoints: (
         'sm': 'screen and (min-width: 500px)',
         'md': 'screen and (min-width: 768px)',
@@ -13,54 +12,53 @@ $breakpoints: (
         'xl': 'screen and (min-width: 1200px)',
 ) !default;
 
-
 /****************************
       base.html.twig
 ****************************/
 
-/****** ヘッダー ******/
+/****** header ******/
 .header {
   overflow              : hidden;
-  background-color      : #f1f1f1;    // 灰色
+  background-color      : #f1f1f1;    // gray
   padding               : 20px 10px;
 
-  /***** ヘッダー内のリンク *****/
+  /***** link in header *****/
   a{
-    float               : left;       // 右寄り
+    float               : left;
     color               : $font-color;
-    text-align          : center;     // 中央寄せ
+    text-align          : center;
     padding             : 12px;
     text-decoration     : none;
     font-size           : 18px;
-    line-height         : 25px;       // 行間
-    border-radius       : 4px;        // 角の丸み
+    line-height         : 25px;
+    border-radius       : 4px;
 
-    /*****　ロゴ *****/
+    /*****　logo *****/
     &.logo {
       font-size         : 25px;
-      font-weight       : bold;       // 太字
+      font-weight       : bold;
     }
 
-    /*****　カーソルが被さった時 *****/
+    /*****　hover *****/
     &:hover {
-      background-color  : #ddd;       // 薄い灰色
+      background-color  : #ddd;       // light gray
       color             : $font-color;
     }
 
-    /***** 選択中のリンク *****/
+    /***** selected link *****/
     &.active {
-      background-color  : dodgerblue; // 青色
+      background-color  : dodgerblue; // blue
       color             : white;
     }
   }
 }
 
-/****** ヘッダー内のリンクを右に寄せる *******/
+/****** shift link in header to left *******/
 .header-right {
   float             : right;
 }
 
-/***** レスポンシブ  *****/
+/***** responsive  *****/
 @media screen and (max-width: 500px) {
   .header a {
     float           : none;
@@ -77,12 +75,12 @@ $breakpoints: (
      login.html.twig
 ****************************/
 
-/************ ログイン, 新規作成用のボックス ***********/
+/************ box for login and sign up ***********/
 .user_container {
-  position           : absolute;         // 絶対位置 => 実用的ではない
+  position           : absolute;
   top                : 30%;
   left               : 25%;
-  width              : 50%;             // 幅は画面の50%
+  width              : 50%;             // 50% of screen
   border             : 1px solid #000;
   padding            : 10px 20px 10px 20px;
   background-color   : white;
@@ -94,8 +92,8 @@ $breakpoints: (
      dashboard.html.twig
 ****************************/
 
-/********* メイン画面のレイアウト ***************/
-/* 次のサイトよりGridを作成 => https://cssgrid-generator.netlify.app/ */
+/********* layout for the main page ***************/
+/* generate grid => https://cssgrid-generator.netlify.app/ */
 .parent {
   display                 : grid;
   grid-template-columns   : repeat(6, 1fr);
@@ -104,30 +102,30 @@ $breakpoints: (
   grid-row-gap            : 0px;
   margin                  : 30px 30px 30px 30px;
 }
-/***** レーダーチャート *****/
+/***** radar chart *****/
 .div1 {
   grid-area           : 1 / 1 / 4 / 3;
 }
-/***** データ出力 *****/
+/***** output data *****/
 .div2 {
   grid-area           : 1 / 3 / 4 / 5;
 }
-/***** グラフチャート *****/
+/***** graph chart *****/
 .div3 {
   grid-area           : 4 / 1 / 6 / 5;
 }
 
-/***** データ入力 *****/
+/***** input data *****/
 .div4 {
   grid-area           : 1 / 5 / 6 / 7;
 
-  /*** データ編集リンク ***/
+  /*** link for fixing data ***/
   h4 {
-    text-align        : center;         // 中央寄せ
+    text-align        : center;
   }
 }
 
-/******** 入力フォームボックス *********/
+/******** form for input the data *********/
 #input_box {
   border          : 1px solid #000;
   padding         : 10px 20px 10px 20px;
@@ -135,22 +133,22 @@ $breakpoints: (
   box-shadow      : 4px 4px 6px gray; /* https://saruwakakun.com/html-css/basic/box-shadow */
   border-radius   : 10px;
 
-  /* 見出し: 「データ入力」 */
+  /* header: "Input Data" */
   h3{
     text-align    : center;
   }
 }
 
-/********** レスポンシブ ************/
+/********** responsive ************/
 @media screen and (max-width: 1000px) {
 
-  /* グリッド変更 */
+  /* change grid */
   .parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
   }
 
   .div1 { grid-area: 3 / 1 / 4 / 2; }
@@ -161,13 +159,13 @@ $breakpoints: (
 
 @media screen and (max-width: 768px) {
 
-  /* グリッド変更 */
+  /* change grid */
   .parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(9, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
   }
 
   .div1 { grid-area: 5 / 1 / 7 / 3; }
@@ -180,30 +178,30 @@ $breakpoints: (
       delete.html.twig
 ****************************/
 
-/****** 以下のテーブル用のコンテナ ******/
+/****** content for the table ******/
 #delete_content{
   margin          : 20px 100px 20px 100px;
 }
 
-/****** データがない場合の見出し ******/
+/****** header when there is no data ******/
 #none_data{
   h1{
     text-align    : center;
   }
 }
 
-/****** データ開示のテーブル ******/
+/****** table for all data ******/
 table{
   border-collapse : collapse;
   border-spacing  : 0;
   width           : 100%;
 
-  /***** それぞれの行 *****/
+  /***** each line *****/
   tr{
     border-bottom : solid 1px #eee;
     cursor        : pointer;
 
-    /***** カーソルが被さったとき ******/
+    /***** hover ******/
     &:hover{
       background-color: #d4f0fd;   // 薄い水色
     }
@@ -216,7 +214,7 @@ table{
   }
 }
 
-/********** レスポンシブ ************/
+/********** Responsive ************/
 @media screen and (max-width: 640px) {
   .responsive_table {
     width: 100%;
